CodeGen/y.output
State 0 conflicts: 21 shift/reduce, 1 reduce/reduce
State 4 conflicts: 14 shift/reduce
State 5 conflicts: 14 shift/reduce
State 13 conflicts: 3 shift/reduce
State 15 conflicts: 3 shift/reduce
State 17 conflicts: 7 shift/reduce
State 19 conflicts: 12 shift/reduce
State 23 conflicts: 21 shift/reduce, 1 reduce/reduce
State 37 conflicts: 18 shift/reduce
State 38 conflicts: 14 shift/reduce
State 40 conflicts: 14 shift/reduce
State 41 conflicts: 2 shift/reduce
State 42 conflicts: 3 shift/reduce
State 45 conflicts: 1 shift/reduce
State 47 conflicts: 3 shift/reduce
State 48 conflicts: 1 shift/reduce
State 54 conflicts: 12 shift/reduce
State 59 conflicts: 18 shift/reduce
State 64 conflicts: 18 shift/reduce
State 67 conflicts: 12 shift/reduce
State 82 conflicts: 12 shift/reduce
State 91 conflicts: 21 shift/reduce, 1 reduce/reduce
State 95 conflicts: 21 shift/reduce, 2 reduce/reduce
State 98 conflicts: 1 shift/reduce
State 103 conflicts: 14 shift/reduce, 30 reduce/reduce
State 112 conflicts: 2 shift/reduce
State 113 conflicts: 18 shift/reduce
State 114 conflicts: 18 shift/reduce
State 120 conflicts: 14 shift/reduce
State 131 conflicts: 1 shift/reduce
State 132 conflicts: 1 shift/reduce, 1 reduce/reduce
State 138 conflicts: 12 shift/reduce
State 139 conflicts: 12 shift/reduce
State 166 conflicts: 12 shift/reduce
State 173 conflicts: 14 shift/reduce, 30 reduce/reduce
State 174 conflicts: 14 shift/reduce, 30 reduce/reduce
State 175 conflicts: 14 shift/reduce, 30 reduce/reduce
State 176 conflicts: 14 shift/reduce, 30 reduce/reduce
State 177 conflicts: 14 shift/reduce, 30 reduce/reduce
State 178 conflicts: 30 reduce/reduce
State 180 conflicts: 18 shift/reduce
State 181 conflicts: 30 reduce/reduce
State 182 conflicts: 30 reduce/reduce
State 183 conflicts: 30 reduce/reduce
State 184 conflicts: 30 reduce/reduce
State 186 conflicts: 2 shift/reduce
State 187 conflicts: 2 shift/reduce
State 188 conflicts: 2 shift/reduce
State 189 conflicts: 2 shift/reduce
State 190 conflicts: 2 shift/reduce
State 191 conflicts: 2 shift/reduce
State 192 conflicts: 3 shift/reduce
State 193 conflicts: 3 shift/reduce
State 197 conflicts: 18 shift/reduce
State 219 conflicts: 21 shift/reduce, 1 reduce/reduce
State 222 conflicts: 21 shift/reduce, 1 reduce/reduce
State 223 conflicts: 21 shift/reduce, 1 reduce/reduce
State 228 conflicts: 14 shift/reduce
State 249 conflicts: 12 shift/reduce
State 255 conflicts: 18 shift/reduce
State 266 conflicts: 12 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: stmt stmts
    2        | %empty

    3 stmts: stmt stmts
    4      | %empty

    5 stmt: declaration
    6     | print_stmt
    7     | error_stmt
    8     | if_stmt
    9     | for_stmt
   10     | pure_arithmetic
   11     | incdec_stmt
   12     | arithmetic_add_stmt
   13     | expression_stmt
   14     | block
   15     | NEWLINE

   16 $@1: %empty

   17 declaration: VAR ID INT $@1 literal_initial NEWLINE
   18            | VAR ID STRING string_initial

   19 $@2: %empty

   20 declaration: VAR ID FLOAT $@2 literal_initial NEWLINE
   21            | VAR ID BOOL bool_initial NEWLINE
   22            | VAR ID '[' INT_LIT ']' INT NEWLINE
   23            | VAR ID '[' INT_LIT ']' FLOAT NEWLINE

   24 $@3: %empty

   25 $@4: %empty

   26 declaration: ID '[' INT_LIT $@3 ']' array_initial $@4 NEWLINE

   27 $@5: %empty

   28 declaration: ident assign $@5 NEWLINE

   29 $@6: %empty

   30 declaration: ID '=' expression $@6 NEWLINE

   31 array_initial: assign
   32              | %empty

   33 bool_initial: '=' bool
   34             | %empty

   35 literal_initial: '=' literal
   36                | %empty

   37 string_initial: '=' '"' STRING_LIT '"' NEWLINE

   38 $@7: %empty

   39 string_initial: $@7 NEWLINE

   40 incdec_stmt: ident INC
   41            | ident DEC

   42 $@8: %empty

   43 print_stmt: PRINTLN $@8 '(' expression ')'

   44 $@9: %empty

   45 print_stmt: PRINT $@9 '(' expression ')'

   46 pure_arithmetic: int_literal '+' int_literal
   47                | int_literal '-' int_literal
   48                | FLOAT_LIT '+' FLOAT_LIT
   49                | FLOAT_LIT '-' FLOAT_LIT
   50                | ID '+' INT_LIT
   51                | invalid_arithmetic

   52 invalid_arithmetic: INT_LIT '+' FLOAT_LIT
   53                   | FLOAT_LIT '+' INT_LIT
   54                   | INT_LIT '-' FLOAT_LIT
   55                   | FLOAT_LIT '-' INT_LIT
   56                   | INT_LIT '*' FLOAT_LIT
   57                   | FLOAT_LIT '*' INT_LIT
   58                   | ID '%' INT_LIT
   59                   | int_literal LAND bool
   60                   | float_literal LAND bool
   61                   | bool LOR expression

   62 $@10: %empty

   63 $@11: %empty

   64 $@12: %empty

   65 if_stmt: IF $@10 expression $@11 block $@12 else_stmt

   66 else_stmt: ELSE if_stmt
   67          | ELSE block
   68          | %empty

   69 $@13: %empty

   70 for_stmt: FOR float_literal '{' $@13 stmts '}'

   71 $@14: %empty

   72 for_stmt: FOR int_literal '{' $@14 stmts '}'

   73 $@15: %empty

   74 for_stmt: FOR pure_arithmetic '{' $@15 stmts '}'
   75         | FOR for_expr block

   76 $@16: %empty

   77 for_expr: ident assign $@16 ';' comparsion_expression ';' incdec_stmt

   78 $@17: %empty

   79 for_expr: ident $@17 '>' int_literal

   80 $@18: %empty

   81 assign: ADD_ASSIGN $@18 var

   82 $@19: %empty

   83 assign: SUB_ASSIGN $@19 var

   84 $@20: %empty

   85 assign: MUL_ASSIGN $@20 var

   86 $@21: %empty

   87 assign: QUO_ASSIGN $@21 var

   88 $@22: %empty

   89 assign: REM_ASSIGN $@22 var
   90       | '=' var
   91       | error_assign

   92 error_assign: ADD_ASSIGN ID

   93 error_stmt: literal assign

   94 var: int_literal
   95    | float_literal
   96    | string_literal
   97    | bool
   98    | expression
   99    | ID
  100    | %empty

  101 ident: ID

  102 $@23: %empty

  103 block: '{' $@23 stmts '}'

  104 arithmetic_add_stmt: ID '+' ID
  105                    | ID '-' ID
  106                    | arithmetic_mul_stmt

  107 arithmetic_mul_stmt: ID '*' ID
  108                    | ID '/' ID
  109                    | ID '%' ID

  110 expression_stmt: expression

  111 expression: comparsion_expression expression
  112           | lor_expression expression
  113           | add_expression
  114           | %empty

  115 lor_expression: land_expression
  116               | LOR expression

  117 land_expression: LAND expression

  118 comparsion_expression: expression '>' add_expression
  119                      | expression '<' add_expression
  120                      | expression GEQ add_expression
  121                      | expression LEQ add_expression
  122                      | expression EQL add_expression
  123                      | expression NEQ add_expression
  124                      | expression add_expression

  125 add_expression: add_expression '+' mul_expression
  126               | add_expression '-' mul_expression
  127               | mul_expression

  128 mul_expression: mul_expression '*' operand
  129               | mul_expression '/' operand
  130               | mul_expression '%' operand
  131               | operand

  132 operand: '(' expression ')'
  133        | term

  134 term: literal
  135     | sign_literal
  136     | literal_convert
  137     | string_literal
  138     | bool
  139     | id_term

  140 $@24: %empty

  141 $@25: %empty

  142 bool: '!' $@24 bool $@25 expression
  143     | TRUE
  144     | FALSE

  145 literal: int_literal
  146        | float_literal

  147 int_literal: INT_LIT

  148 float_literal: FLOAT_LIT

  149 sign_literal: SIGN_INT_LIT
  150             | SIGN_FLOAT_LIT

  151 string_literal: '"' STRING_LIT '"'

  152 literal_convert: INT '(' ident ')'
  153                | INT '(' FLOAT_LIT ')'
  154                | FLOAT '(' ident ')'
  155                | FLOAT '(' INT_LIT ')'
  156                | INT '(' ID '[' INT_LIT ']' ')'
  157                | INT '(' expression ')'

  158 $@26: %empty

  159 id_term: ID $@26 '[' expression ']'
  160        | ID


Terminals, with rules where they appear

$end (0) 0
'!' (33) 142
'"' (34) 37 151
'%' (37) 58 109 130
'(' (40) 43 45 132 152 153 154 155 156 157
')' (41) 43 45 132 152 153 154 155 156 157
'*' (42) 56 57 107 128
'+' (43) 46 48 50 52 53 104 125
'-' (45) 47 49 54 55 105 126
'/' (47) 108 129
';' (59) 77
'<' (60) 119
'=' (61) 30 33 35 37 90
'>' (62) 79 118
'[' (91) 22 23 26 156 159
']' (93) 22 23 26 156 159
'{' (123) 70 72 74 103
'}' (125) 70 72 74 103
error (256)
VAR (258) 17 18 20 21 22 23
INT (259) 17 22 152 153 156 157
FLOAT (260) 20 23 154 155
BOOL (261) 21
STRING (262) 18
INC (263) 40
DEC (264) 41
GEQ (265) 120
LEQ (266) 121
EQL (267) 122
NEQ (268) 123
ADD_ASSIGN (269) 81 92
SUB_ASSIGN (270) 83
MUL_ASSIGN (271) 85
QUO_ASSIGN (272) 87
REM_ASSIGN (273) 89
LAND (274) 59 60 117
LOR (275) 61 116
NEWLINE (276) 15 17 20 21 22 23 26 28 30 37 39
PRINT (277) 45
PRINTLN (278) 43
IF (279) 65
ELSE (280) 66 67
FOR (281) 70 72 74 75
TRUE (282) 143
FALSE (283) 144
INT_LIT (284) 22 23 26 50 52 53 54 55 56 57 58 147 155 156
SIGN_INT_LIT (285) 149
FLOAT_LIT (286) 48 49 52 53 54 55 56 57 148 153
SIGN_FLOAT_LIT (287) 150
STRING_LIT (288) 37 151
ID (289) 17 18 20 21 22 23 26 30 50 58 92 99 101 104 105 107 108 109
    156 159 160


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
Program (53)
    on left: 1 2, on right: 0
stmts (54)
    on left: 3 4, on right: 1 3 70 72 74 103
stmt (55)
    on left: 5 6 7 8 9 10 11 12 13 14 15, on right: 1 3
declaration (56)
    on left: 17 18 20 21 22 23 26 28 30, on right: 5
$@1 (57)
    on left: 16, on right: 17
$@2 (58)
    on left: 19, on right: 20
$@3 (59)
    on left: 24, on right: 26
$@4 (60)
    on left: 25, on right: 26
$@5 (61)
    on left: 27, on right: 28
$@6 (62)
    on left: 29, on right: 30
array_initial (63)
    on left: 31 32, on right: 26
bool_initial (64)
    on left: 33 34, on right: 21
literal_initial (65)
    on left: 35 36, on right: 17 20
string_initial (66)
    on left: 37 39, on right: 18
$@7 (67)
    on left: 38, on right: 39
incdec_stmt (68)
    on left: 40 41, on right: 11 77
print_stmt (69)
    on left: 43 45, on right: 6
$@8 (70)
    on left: 42, on right: 43
$@9 (71)
    on left: 44, on right: 45
pure_arithmetic (72)
    on left: 46 47 48 49 50 51, on right: 10 74
invalid_arithmetic (73)
    on left: 52 53 54 55 56 57 58 59 60 61, on right: 51
if_stmt (74)
    on left: 65, on right: 8 66
$@10 (75)
    on left: 62, on right: 65
$@11 (76)
    on left: 63, on right: 65
$@12 (77)
    on left: 64, on right: 65
else_stmt (78)
    on left: 66 67 68, on right: 65
for_stmt (79)
    on left: 70 72 74 75, on right: 9
$@13 (80)
    on left: 69, on right: 70
$@14 (81)
    on left: 71, on right: 72
$@15 (82)
    on left: 73, on right: 74
for_expr (83)
    on left: 77 79, on right: 75
$@16 (84)
    on left: 76, on right: 77
$@17 (85)
    on left: 78, on right: 79
assign (86)
    on left: 81 83 85 87 89 90 91, on right: 28 31 77 93
$@18 (87)
    on left: 80, on right: 81
$@19 (88)
    on left: 82, on right: 83
$@20 (89)
    on left: 84, on right: 85
$@21 (90)
    on left: 86, on right: 87
$@22 (91)
    on left: 88, on right: 89
error_assign (92)
    on left: 92, on right: 91
error_stmt (93)
    on left: 93, on right: 7
var (94)
    on left: 94 95 96 97 98 99 100, on right: 81 83 85 87 89 90
ident (95)
    on left: 101, on right: 28 40 41 77 79 152 154
block (96)
    on left: 103, on right: 14 65 67 75
$@23 (97)
    on left: 102, on right: 103
arithmetic_add_stmt (98)
    on left: 104 105 106, on right: 12
arithmetic_mul_stmt (99)
    on left: 107 108 109, on right: 106
expression_stmt (100)
    on left: 110, on right: 13
expression (101)
    on left: 111 112 113 114, on right: 30 43 45 61 65 98 110 111 112
    116 117 118 119 120 121 122 123 124 132 142 157 159
lor_expression (102)
    on left: 115 116, on right: 112
land_expression (103)
    on left: 117, on right: 115
comparsion_expression (104)
    on left: 118 119 120 121 122 123 124, on right: 77 111
add_expression (105)
    on left: 125 126 127, on right: 113 118 119 120 121 122 123 124
    125 126
mul_expression (106)
    on left: 128 129 130 131, on right: 125 126 127 128 129 130
operand (107)
    on left: 132 133, on right: 128 129 130 131
term (108)
    on left: 134 135 136 137 138 139, on right: 133
bool (109)
    on left: 142 143 144, on right: 33 59 60 61 97 138 142
$@24 (110)
    on left: 140, on right: 142
$@25 (111)
    on left: 141, on right: 142
literal (112)
    on left: 145 146, on right: 35 93 134
int_literal (113)
    on left: 147, on right: 46 47 59 72 79 94 145
float_literal (114)
    on left: 148, on right: 60 70 95 146
sign_literal (115)
    on left: 149 150, on right: 135
string_literal (116)
    on left: 151, on right: 96 137
literal_convert (117)
    on left: 152 153 154 155 156 157, on right: 136
id_term (118)
    on left: 159 160, on right: 139
$@26 (119)
    on left: 158, on right: 159


State 0

    0 $accept: . Program $end

    VAR             shift, and go to state 1
    INT             shift, and go to state 2
    FLOAT           shift, and go to state 3
    LAND            shift, and go to state 4
    LOR             shift, and go to state 5
    NEWLINE         shift, and go to state 6
    PRINT           shift, and go to state 7
    PRINTLN         shift, and go to state 8
    IF              shift, and go to state 9
    FOR             shift, and go to state 10
    TRUE            shift, and go to state 11
    FALSE           shift, and go to state 12
    INT_LIT         shift, and go to state 13
    SIGN_INT_LIT    shift, and go to state 14
    FLOAT_LIT       shift, and go to state 15
    SIGN_FLOAT_LIT  shift, and go to state 16
    ID              shift, and go to state 17
    '"'             shift, and go to state 18
    '('             shift, and go to state 19
    '{'             shift, and go to state 20
    '!'             shift, and go to state 21

    $end            reduce using rule 2 (Program)
    $end            [reduce using rule 114 (expression)]
    VAR             [reduce using rule 114 (expression)]
    INT             [reduce using rule 114 (expression)]
    FLOAT           [reduce using rule 114 (expression)]
    LAND            [reduce using rule 114 (expression)]
    LOR             [reduce using rule 114 (expression)]
    NEWLINE         [reduce using rule 114 (expression)]
    PRINT           [reduce using rule 114 (expression)]
    PRINTLN         [reduce using rule 114 (expression)]
    IF              [reduce using rule 114 (expression)]
    FOR             [reduce using rule 114 (expression)]
    TRUE            [reduce using rule 114 (expression)]
    FALSE           [reduce using rule 114 (expression)]
    INT_LIT         [reduce using rule 114 (expression)]
    SIGN_INT_LIT    [reduce using rule 114 (expression)]
    FLOAT_LIT       [reduce using rule 114 (expression)]
    SIGN_FLOAT_LIT  [reduce using rule 114 (expression)]
    ID              [reduce using rule 114 (expression)]
    '"'             [reduce using rule 114 (expression)]
    '('             [reduce using rule 114 (expression)]
    '{'             [reduce using rule 114 (expression)]
    '!'             [reduce using rule 114 (expression)]
    $default        reduce using rule 114 (expression)

    Program                go to state 22
    stmt                   go to state 23
    declaration            go to state 24
    incdec_stmt            go to state 25
    print_stmt             go to state 26
    pure_arithmetic        go to state 27
    invalid_arithmetic     go to state 28
    if_stmt                go to state 29
    for_stmt               go to state 30
    error_stmt             go to state 31
    ident                  go to state 32
    block                  go to state 33
    arithmetic_add_stmt    go to state 34
    arithmetic_mul_stmt    go to state 35
    expression_stmt        go to state 36
    expression             go to state 37
    lor_expression         go to state 38
    land_expression        go to state 39
    comparsion_expression  go to state 40
    add_expression         go to state 41
    mul_expression         go to state 42
    operand                go to state 43
    term                   go to state 44
    bool                   go to state 45
    literal                go to state 46
    int_literal            go to state 47
    float_literal          go to state 48
    sign_literal           go to state 49
    string_literal         go to state 50
    literal_convert        go to state 51
    id_term                go to state 52


State 1

   17 declaration: VAR . ID INT $@1 literal_initial NEWLINE
   18            | VAR . ID STRING string_initial
   20            | VAR . ID FLOAT $@2 literal_initial NEWLINE
   21            | VAR . ID BOOL bool_initial NEWLINE
   22            | VAR . ID '[' INT_LIT ']' INT NEWLINE
   23            | VAR . ID '[' INT_LIT ']' FLOAT NEWLINE

    ID  shift, and go to state 53


State 2

  152 literal_convert: INT . '(' ident ')'
  153                | INT . '(' FLOAT_LIT ')'
  156                | INT . '(' ID '[' INT_LIT ']' ')'
  157                | INT . '(' expression ')'

    '('  shift, and go to state 54


State 3

  154 literal_convert: FLOAT . '(' ident ')'
  155                | FLOAT . '(' INT_LIT ')'

    '('  shift, and go to state 55


State 4

  117 land_expression: LAND . expression

    INT             shift, and go to state 2
    FLOAT           shift, and go to state 3
    LAND            shift, and go to state 4
    LOR             shift, and go to state 5
    TRUE            shift, and go to state 11
    FALSE           shift, and go to state 12
    INT_LIT         shift, and go to state 56
    SIGN_INT_LIT    shift, and go to state 14
    FLOAT_LIT       shift, and go to state 57
    SIGN_FLOAT_LIT  shift, and go to state 16
    ID              shift, and go to state 58
    '"'             shift, and go to state 18
    '('             shift, and go to state 19
    '!'             shift, and go to state 21

    INT             [reduce using rule 114 (expression)]
    FLOAT           [reduce using rule 114 (expression)]
    LAND            [reduce using rule 114 (expression)]
    LOR             [reduce using rule 114 (expression)]
    TRUE            [reduce using rule 114 (expression)]
    FALSE           [reduce using rule 114 (expression)]
    INT_LIT         [reduce using rule 114 (expression)]
    SIGN_INT_LIT    [reduce using rule 114 (expression)]
    FLOAT_LIT       [reduce using rule 114 (expression)]
    SIGN_FLOAT_LIT  [reduce using rule 114 (expression)]
    ID              [reduce using rule 114 (expression)]
    '"'             [reduce using rule 114 (expression)]
    '('             [reduce using rule 114 (expression)]
    '!'             [reduce using rule 114 (expression)]
    $default        reduce using rule 114 (expression)

    expression             go to state 59
    lor_expression         go to state 38
    land_expression        go to state 39
    comparsion_expression  go to state 40
    add_expression         go to state 41
    mul_expression         go to state 42
    operand                go to state 43
    term                   go to state 44
    bool                   go to state 60
    literal                go to state 61
    int_literal            go to state 62
    float_literal          go to state 63
    sign_literal           go to state 49
    string_literal         go to state 50
    literal_convert        go to state 51
    id_term                go to state 52


State 5

  116 lor_expression: LOR . expression

    INT             shift, and go to state 2
    FLOAT           shift, and go to state 3
    LAND            shift, and go to state 4
    LOR             shift, and go to state 5
    TRUE            shift, and go to state 11
    FALSE           shift, and go to state 12
    INT_LIT         shift, and go to state 56
    SIGN_INT_LIT    shift, and go to state 14
    FLOAT_LIT       shift, and go to state 57
    SIGN_FLOAT_LIT  shift, and go to state 16
    ID              shift, and go to state 58
    '"'             shift, and go to state 18
    '('             shift, and go to state 19
    '!'             shift, and go to state 21

    INT             [reduce using rule 114 (expression)]
    FLOAT           [reduce using rule 114 (expression)]
    LAND            [reduce using rule 114 (expression)]
    LOR             [reduce using rule 114 (expression)]
    TRUE            [reduce using rule 114 (expression)]
    FALSE           [reduce using rule 114 (expression)]
    INT_LIT         [reduce using rule 114 (expression)]
    SIGN_INT_LIT    [reduce using rule 114 (expression)]
    FLOAT_LIT       [reduce using rule 114 (expression)]
    SIGN_FLOAT_LIT  [reduce using rule 114 (expression)]
    ID              [reduce using rule 114 (expression)]
    '"'             [reduce using rule 114 (expression)]
    '('             [reduce using rule 114 (expression)]
    '!'             [reduce using rule 114 (expression)]
    $default        reduce using rule 114 (expression)

    expression             go to state 64
    lor_expression         go to state 38
    land_expression        go to state 39
    comparsion_expression  go to state 40
    add_expression         go to state 41
    mul_expression         go to state 42
    operand                go to state 43
    term                   go to state 44
    bool                   go to state 60
    literal                go to state 61
    int_literal            go to state 62
    float_literal          go to state 63
    sign_literal           go to state 49
    string_literal         go to state 50
    literal_convert        go to state 51
    id_term                go to state 52


State 6

   15 stmt: NEWLINE .

    $default  reduce using rule 15 (stmt)


State 7

   45 print_stmt: PRINT . $@9 '(' expression ')'

    $default  reduce using rule 44 ($@9)

    $@9  go to state 65


State 8

   43 print_stmt: PRINTLN . $@8 '(' expression ')'

    $default  reduce using rule 42 ($@8)

    $@8  go to state 66


State 9

   65 if_stmt: IF . $@10 expression $@11 block $@12 else_stmt

    $default  reduce using rule 62 ($@10)

    $@10  go to state 67


State 10

   70 for_stmt: FOR . float_literal '{' $@13 stmts '}'
   72         | FOR . int_literal '{' $@14 stmts '}'
   74         | FOR . pure_arithmetic '{' $@15 stmts '}'
   75         | FOR . for_expr block

    TRUE       shift, and go to state 11
    FALSE      shift, and go to state 12
    INT_LIT    shift, and go to state 13
    FLOAT_LIT  shift, and go to state 15
    ID         shift, and go to state 68
    '!'        shift, and go to state 21

    pure_arithmetic     go to state 69
    invalid_arithmetic  go to state 28
    for_expr            go to state 70
    ident               go to state 71
    bool                go to state 72
    int_literal         go to state 73
    float_literal       go to state 74


State 11

  143 bool: TRUE .

    $default  reduce using rule 143 (bool)


State 12

  144 bool: FALSE .

    $default  reduce using rule 144 (bool)


State 13

   52 invalid_arithmetic: INT_LIT . '+' FLOAT_LIT
   54                   | INT_LIT . '-' FLOAT_LIT
   56                   | INT_LIT . '*' FLOAT_LIT
  147 int_literal: INT_LIT .

    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77

    '+'       [reduce using rule 147 (int_literal)]
    '-'       [reduce using rule 147 (int_literal)]
    '*'       [reduce using rule 147 (int_literal)]
    $default  reduce using rule 147 (int_literal)


State 14

  149 sign_literal: SIGN_INT_LIT .

    $default  reduce using rule 149 (sign_literal)


State 15

   48 pure_arithmetic: FLOAT_LIT . '+' FLOAT_LIT
   49                | FLOAT_LIT . '-' FLOAT_LIT
   53 invalid_arithmetic: FLOAT_LIT . '+' INT_LIT
   55                   | FLOAT_LIT . '-' INT_LIT
   57                   | FLOAT_LIT . '*' INT_LIT
  148 float_literal: FLOAT_LIT .

    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80

    '+'       [reduce using rule 148 (float_literal)]
    '-'       [reduce using rule 148 (float_literal)]
    '*'       [reduce using rule 148 (float_literal)]
    $default  reduce using rule 148 (float_literal)


State 16

  150 sign_literal: SIGN_FLOAT_LIT .

    $default  reduce using rule 150 (sign_literal)


State 17

   26 declaration: ID . '[' INT_LIT $@3 ']' array_initial $@4 NEWLINE
   30            | ID . '=' expression $@6 NEWLINE
   50 pure_arithmetic: ID . '+' INT_LIT
   58 invalid_arithmetic: ID . '%' INT_LIT
  101 ident: ID .
  104 arithmetic_add_stmt: ID . '+' ID
  105                    | ID . '-' ID
  107 arithmetic_mul_stmt: ID . '*' ID
  108                    | ID . '/' ID
  109                    | ID . '%' ID
  159 id_term: ID . $@26 '[' expression ']'
  160        | ID .

    '['  shift, and go to state 81
    '='  shift, and go to state 82
    '+'  shift, and go to state 83
    '-'  shift, and go to state 84
    '*'  shift, and go to state 85
    '%'  shift, and go to state 86
    '/'  shift, and go to state 87

    INC         reduce using rule 101 (ident)
    DEC         reduce using rule 101 (ident)
    ADD_ASSIGN  reduce using rule 101 (ident)
    SUB_ASSIGN  reduce using rule 101 (ident)
    MUL_ASSIGN  reduce using rule 101 (ident)
    QUO_ASSIGN  reduce using rule 101 (ident)
    REM_ASSIGN  reduce using rule 101 (ident)
    '['         [reduce using rule 158 ($@26)]
    '='         [reduce using rule 101 (ident)]
    '+'         [reduce using rule 160 (id_term)]
    '-'         [reduce using rule 160 (id_term)]
    '*'         [reduce using rule 160 (id_term)]
    '%'         [reduce using rule 160 (id_term)]
    '/'         [reduce using rule 160 (id_term)]
    $default    reduce using rule 160 (id_term)

    $@26  go to state 88


State 18

  151 string_literal: '"' . STRING_LIT '"'

    STRING_LIT  shift, and go to state 89


State 19

  132 operand: '(' . expression ')'

    INT             shift, and go to state 2
    FLOAT           shift, and go to state 3
    LAND            shift, and go to state 4
    LOR             shift, and go to state 5
    TRUE            shift, and go to state 11
    FALSE           shift, and go to state 12
    INT_LIT         shift, and go to state 56
    SIGN_INT_LIT    shift, and go to state 14
    FLOAT_LIT       shift, and go to state 57
    SIGN_FLOAT_LIT  shift, and go to state 16
    ID              shift, and go to state 58
    '"'             shift, and go to state 18
    '('             shift, and go to state 19
    '!'             shift, and go to state 21

    INT             [reduce using rule 114 (expression)]
    FLOAT           [reduce using rule 114 (expression)]
    TRUE            [reduce using rule 114 (expression)]
    FALSE           [reduce using rule 114 (expression)]
    INT_LIT         [reduce using rule 114 (expression)]
    SIGN_INT_LIT    [reduce using rule 114 (expression)]
    FLOAT_LIT       [reduce using rule 114 (expression)]
    SIGN_FLOAT_LIT  [reduce using rule 114 (expression)]
    ID              [reduce using rule 114 (expression)]
    '"'             [reduce using rule 114 (expression)]
    '('             [reduce using rule 114 (expression)]
    '!'             [reduce using rule 114 (expression)]
    $default        reduce using rule 114 (expression)

    expression             go to state 90
    lor_expression         go to state 38
    land_expression        go to state 39
    comparsion_expression  go to state 40
    add_expression         go to state 41
    mul_expression         go to state 42
    operand                go to state 43
    term                   go to state 44
    bool                   go to state 60
    literal                go to state 61
    int_literal            go to state 62
    float_literal          go to state 63
    sign_literal           go to state 49
    string_literal         go to state 50
    literal_convert        go to state 51
    id_term                go to state 52


State 20

  103 block: '{' . $@23 stmts '}'

    $default  reduce using rule 102 ($@23)

    $@23  go to state 91


State 21

  142 bool: '!' . $@24 bool $@25 expression

    $default  reduce using rule 140 ($@24)

    $@24  go to state 92


State 22

    0 $accept: Program . $end

    $end  shift, and go to state 93


State 23

    1 Program: stmt . stmts

    VAR             shift, and go to state 1
    INT             shift, and go to state 2
    FLOAT           shift, and go to state 3
    LAND            shift, and go to state 4
    LOR             shift, and go to state 5
    NEWLINE         shift, and go to state 6
    PRINT           shift, and go to state 7
    PRINTLN         shift, and go to state 8
    IF              shift, and go to state 9
    FOR             shift, and go to state 10
    TRUE            shift, and go to state 11
    FALSE           shift, and go to state 12
    INT_LIT         shift, and go to state 13
    SIGN_INT_LIT    shift, and go to state 14
    FLOAT_LIT       shift, and go to state 15
    SIGN_FLOAT_LIT  shift, and go to state 16
    ID              shift, and go to state 17
    '"'             shift, and go to state 18
    '('             shift, and go to state 19
    '{'             shift, and go to state 20
    '!'             shift, and go to state 21

    $end            reduce using rule 4 (stmts)
    $end            [reduce using rule 114 (expression)]
    VAR             [reduce using rule 114 (expression)]
    INT             [reduce using rule 114 (expression)]
    FLOAT           [reduce using rule 114 (expression)]
    LAND            [reduce using rule 114 (expression)]
    LOR             [reduce using rule 114 (expression)]
    NEWLINE         [reduce using rule 114 (expression)]
    PRINT           [reduce using rule 114 (expression)]
    PRINTLN         [reduce using rule 114 (expression)]
    IF              [reduce using rule 114 (expression)]
    FOR             [reduce using rule 114 (expression)]
    TRUE            [reduce using rule 114 (expression)]
    FALSE           [reduce using rule 114 (expression)]
    INT_LIT         [reduce using rule 114 (expression)]
    SIGN_INT_LIT    [reduce using rule 114 (expression)]
    FLOAT_LIT       [reduce using rule 114 (expression)]
    SIGN_FLOAT_LIT  [reduce using rule 114 (expression)]
    ID              [reduce using rule 114 (expression)]
    '"'             [reduce using rule 114 (expression)]
    '('             [reduce using rule 114 (expression)]
    '{'             [reduce using rule 114 (expression)]
    '!'             [reduce using rule 114 (expression)]
    $default        reduce using rule 114 (expression)

    stmts                  go to state 94
    stmt                   go to state 95
    declaration            go to state 24
    incdec_stmt            go to state 25
    print_stmt             go to state 26
    pure_arithmetic        go to state 27
    invalid_arithmetic     go to state 28
    if_stmt                go to state 29
    for_stmt               go to state 30
    error_stmt             go to state 31
    ident                  go to state 32
    block                  go to state 33
    arithmetic_add_stmt    go to state 34
    arithmetic_mul_stmt    go to state 35
    expression_stmt        go to state 36
    expression             go to state 37
    lor_expression         go to state 38
    land_expression        go to state 39
    comparsion_expression  go to state 40
    add_expression         go to state 41
    mul_expression         go to state 42
    operand                go to state 43
    term                   go to state 44
    bool                   go to state 45
    literal                go to state 46
    int_literal            go to state 47
    float_literal          go to state 48
    sign_literal           go to state 49
    string_literal         go to state 50
    literal_convert        go to state 51
    id_term                go to state 52


State 24

    5 stmt: declaration .

    $default  reduce using rule 5 (stmt)


State 25

   11 stmt: incdec_stmt .

    $default  reduce using rule 11 (stmt)


State 26

    6 stmt: print_stmt .

    $default  reduce using rule 6 (stmt)


State 27

   10 stmt: pure_arithmetic .

    $default  reduce using rule 10 (stmt)


State 28

   51 pure_arithmetic: invalid_arithmetic .

    $default  reduce using rule 51 (pure_arithmetic)


State 29

    8 stmt: if_stmt .

    $default  reduce using rule 8 (stmt)


State 30

    9 stmt: for_stmt .

    $default  reduce using rule 9 (stmt)


State 31

    7 stmt: error_stmt .

    $default  reduce using rule 7 (stmt)


State 32

   28 declaration: ident . assign $@5 NEWLINE
   40 incdec_stmt: ident . INC
   41            | ident . DEC

    INC         shift, and go to state 96
    DEC         shift, and go to state 97
    ADD_ASSIGN  shift, and go to state 98
    SUB_ASSIGN  shift, and go to state 99
    MUL_ASSIGN  shift, and go to state 100
    QUO_ASSIGN  shift, and go to state 101
    REM_ASSIGN  shift, and go to state 102
    '='         shift, and go to state 103

    assign        go to state 104
    error_assign  go to state 105


State 33

   14 stmt: block .

    $default  reduce using rule 14 (stmt)


State 34

   12 stmt: arithmetic_add_stmt .

    $default  reduce using rule 12 (stmt)


State 35

  106 arithmetic_add_stmt: arithmetic_mul_stmt .

    $default  reduce using rule 106 (arithmetic_add_stmt)


State 36

   13 stmt: expression_stmt .

    $default  reduce using rule 13 (stmt)


State 37

  110 expression_stmt: expression .
  118 comparsion_expression: expression . '>' add_expression
  119                      | expression . '<' add_expression
  120                      | expression . GEQ add_expression
  121                      | expression . LEQ add_expression
  122                      | expression . EQL add_expression
  123                      | expression . NEQ add_expression
  124                      | expression . add_expression
